--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,17 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* If you want to change the color of the text within the input field */
+.PhoneInput {
+  @apply text-black;
+  /* Use any tailwind class you want here */
+}
+
+.PhoneInput input:focus {
+  outline: none;
+  box-shadow: none;
+}
+.PhoneInput input {
+  background-color: #e6eee5;
+}
