pattern og phonenumber works
fixed the whole wherepage so the pattern is implemented in the wherepage and the phonenumber component is fixed so we get the data from it now

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,10 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
-/* If you want to change the color of the text within the input field */
 .PhoneInput {
   @apply text-black;
-  /* Use any tailwind class you want here */
 }
 
 .PhoneInput input:focus {
@@ -14,4 +12,5 @@
 }
 .PhoneInput input {
   background-color: #e6eee5;
+  height: 2.5rem;
 }
