--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -20,3 +20,15 @@
   height: 2.4rem;
   border-radius: 0;
 }
+
+/* styles.css */
+.PhoneInputInput {
+  background-color: var(
+    --bg-color
+  ); /* Change this to the desired background color */
+  outline: none;
+  border: 1px solid var(--border-color); /* Change this to the desired border color */
+  height: 2.5rem;
+  padding-left: 0.5rem;
+  border-radius: 0;
+}
